# FileCompressor

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
src/: compressor.cpp  compressor.h  huffmanNode.cpp  huffmanNode.h  main.cpp
utils/: arguments.cpp  arguments.h
